fix dark mode flash

--- a/styles/darkmode.css
+++ b/styles/darkmode.css
@@ -2,7 +2,7 @@
 html body {
     font-family: 'Manrope';
     /* background-color: rgb(100, 100, 100); */
-    background-color: #2e353b;
+    background-color: #2e353b !important;
     font-size: 25px;
 }
 
