--- a/styles/lightmode.css
+++ b/styles/lightmode.css
@@ -4,8 +4,7 @@
 
 html body {
     font-family: 'Manrope';
-    color: #4C4C3C;
-    background-color: rgb(254, 253, 250);
+    background-color: rgb(254, 253, 250) !important;
     font-size: 25px;
 }
 
@@ -23,7 +22,6 @@ html body {
 }
 
 #navbar-items a {
-/* .navbar a {  */
    background: 
     linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
     linear-gradient(to right, rgba(150, 150, 150, 1), rgba(150, 150, 150, 1), rgba(150, 150, 150, 1));  
